# dpgen

./: .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AGENTS.md  CITATION.cff  MANIFEST.in  README.md  codecov.yml  param.json  pyproject.toml  requirements.txt  run.py  setup.py  sup_siesta.txt
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  generic-issue.md  generic-issue.yml  parameters.md  request-for-help.md
.github/workflows/: documentation.yml  mirror_gitee.yml  publish_conda.yml  release.yml  test.yml
auto_test/: POTCAR  cmpt_01_eos.py  cmpt_02_elastic.py  cmpt_03_vacancy.py  cmpt_04_interstitial.py  cmpt_05_surf.py  cmpt_06_phonon.py  gen_01_eos.py  gen_02_elastic.py  gen_04_interstitial.py  gen_05_surf.py  gen_06_phonon.py  gen_confs.py  machine.json  param.json  run.py
auto_test/example/: graph.001.pb
auto_test/lib/: MachineLocalGPU.py  RemoteJob.py  batch_exec.py  crys.py  lammps.py  lmp.py  localhost.json  machine_exec.py  ovito_file_convert.py  pwscf.py  util.py  utils.py  vasp.py
conda/: conda_build_config.yaml  construct.yaml  meta.yaml
conda/gromacswrapper/: meta.yaml
conda/numkit/: meta.yaml
data/: gen.py  param.json  surf.json  surf.py
data/CH4.POSCAR.01x01x01/: param.json
data/coding/: run.py
data/example/: POTCAR  example.json
data/jsons/: al.diamond.111.json  al.fcc.111.json  al.fcc.222.json  al.hcp.111.json  al.hcp.222.json  al.hcp.332.json  almg.fcc.222.json  almg.hcp.111.json  almg.hcp.332.json  almg.sc.222.json  mg.diamond.111.json  mg.fcc.111.json  mg.fcc.222.json  mg.hcp.111.json  mg.hcp.222.json  mg.hcp.332.json  mg.sc.222.json  si.diamond.111.json  si.fcc.111.json  si.hcp.222.json  surf.al.fcc.json  surf.al.hcp.json  surf.mg.hcp.json  surf.si.diamond.json  w.bcc.111.json  w.bcc.222.json  w.diamond.111.json  w.fcc.111.json  w.hcp.111.json  water.111.json
data/lib/: BatchJob.py  lammps.py  ovito_file_convert.py  pwscf.py  utils.py
data/tools/: bcc.py  cessp2force_lin.py  clean.sh  create_random_disturb.py  diamond.py  fcc.py  hcp.py  ovito_file_convert.py  test.sh
data/vasp.in/: INCAR.md  INCAR.rlx  POTCAR  POTCAR.al  POTCAR.mg
doc/: .gitignore  CONTRIBUTING.md  README.md  conf.py  credits.rst  gen_arginfo.py  how-to-contribute.md  index.rst  requirements.txt  run-mdata.rst  user-guide.md
doc/Autotest/: Auto-test-to-do-list.md  Auto-test.md  EOS-get-started-and-input-examples.md  EOS-make.md  EOS-post.md  EOS-run.md  Elastic-get-started-and-input-examples.md  Elastic-make.md  Elastic-post.md  Elastic-run.md  Interstitial-get-started-and-input-examples.md  Interstitial-make.md  Interstitial-post.md  Interstitial-run.md  Make-run-and-post.md  Property-get-started-and-input-examples.md  Property-make.md  Property-post.md  Property-run.md  Property-type.md  Refine-get-started-and-input-examples.md  Refine-make.md  Refine-post.md  Refine-run.md  Relaxation-get-started-and-input-examples.md  Relaxation-make.md  Relaxation-post.md  Relaxation-run.md  Reproduce-get-started-and-input-examples.md  Reproduce-make.md  Reproduce-post.md  Reproduce-run.md  Surface-get-started-and-input-examples.md  Surface-make.md  Surface-post.md  Surface-run.md  Task-type.md  Vacancy-get-started-and-input-examples.md  Vacancy-make.md  Vacancy-post.md  (+2 more)
doc/autotest/: Auto-test-to-do-list.md  Auto-test.md  EOS-get-started-and-input-examples.md  EOS-run.md  Elastic-get-started-and-input-examples.md  Elastic-make.md  Elastic-post.md  Elastic-run.md  Interstitial-get-started-and-input-examples.md  Interstitial-run.md  Make-run-and-post.md  Property-get-started-and-input-examples.md  Property-make.md  Property-run.md  Property-type.md  Refine-get-started-and-input-examples.md  Refine-make.md  Refine-post.md  Refine-run.md  Relaxation-get-started-and-input-examples.md  Relaxation-make.md  Relaxation-post.md  Relaxation-run.md  Reproduce-get-started-and-input-examples.md  Reproduce-make.md  Reproduce-post.md  Reproduce-run.md  Surface-make.md  Surface-post.md  Task-type.md  autotest.md  index.rst
doc/init/: index.rst  (+9 more)
dpgen/: .gitignore  __init__.py  arginfo.py  gui.py  main.py  plugin.py  util.py
dpgen_venv/: pyvenv.cfg
generator/: PBSJob.py  datacount  param.json  run.py  volstat
lib/: MachineLocal.py  MachinePBS.py  lammps.py  machine_exec.py  ovito_file_convert.py  utils.py  vasp.py
pymatgen/: cmpt_00_equi.py  cmpt_01_eos.py  cmpt_02_elastic.py  cmpt_03_vacancy.py  cmpt_04_interstitial.py  cmpt_05_surf.py  commands  gen_00_equi.py  gen_01_eos.py  gen_02_elastic.py  gen_03_vacancy.py  gen_04_interstitial.py  gen_05_surf.py  gen_confs.py  param.json  workspace.py
test_env/: pyvenv.cfg
tests/: sample.json  sample.yaml  test_check_examples.py  test_cli.py  test_collect.py  test_load_file.py  test_mdata_arginfo.py
(+2840 files in other folders)
